# auto-server

./: Cargo.toml  README.md  rustfmt.toml
common/: Cargo.toml
common/src/: client_config.rs  lib.rs  server_config.rs
examples/: Cargo.toml
examples/src/: lib.rs
macros/: Cargo.toml
macros/src/: distrib.rs  lib.rs  types.rs
