[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros/" }
common = { path = "../common/" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = "0.18.0"
futures = "0.3.25"
pin-project = "1.0.12"

